--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@nuxt/devtools": "latest",
     "nuxt": "^3.8.2",
     "sass": "^1.69.5",
+    "unplugin-element-plus": "^0.8.0",
     "vue": "^3.3.10",
     "vue-router": "^4.2.5"
   },
   "dependencies": {
     "@pinia/nuxt": "^0.5.1",
+    "element-plus": "^2.4.3",
     "normalize.css": "^8.0.1",
     "pinia": "^2.1.7"
   }
